--- a/wstunnel-cli/Cargo.toml
+++ b/wstunnel-cli/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 clap = { version = "4.5.56", features = ["derive", "env"] }
+config = { version = "0.14", default-features = false, features = ["yaml", "toml", "json"] }
 fdlimit = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.9"
 tokio = { version = "1.49.0", features = ["full"] }
 tracing = { version = "0.1.44", features = ["log"] }
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "local-time"] }
