--- a/wstunnel/Cargo.toml
+++ b/wstunnel/Cargo.toml
@@ -47,7 +47,7 @@ tokio = { version = "1.49.0", features = ["io-std", "net", "signal", "sync", "ti
 tokio-stream = { version = "0.1.18", features = ["net"] }
 
 tracing = { version = "0.1.44", features = ["log"] }
-url = "2.5.8"
+url = { version = "2.5.8", features = ["serde"] }
 urlencoding = "2.1.3"
 uuid = { version = "1.20.0", features = ["v7", "serde"] }
 derive_more = { version = "2.1.1", features = ["display", "error"] }
