--- a/wstunnel/Cargo.toml
+++ b/wstunnel/Cargo.toml
@@ -85,7 +85,13 @@ aws-lc-rs = [
   "rcgen/aws_lc_rs",
   "hickory-resolver/tls-aws-lc-rs",
   "hickory-resolver/https-aws-lc-rs",
-  "jsonwebtoken/aws_lc_rs"
+  "jsonwebtoken/aws_lc_rs",
 ]
 aws-lc-rs-bindgen = ["dep:aws-lc-rs", "aws-lc-rs/bindgen"]
-ring = ["tokio-rustls/ring", "rcgen/ring", "hickory-resolver/tls-ring", "hickory-resolver/https-ring", "jsonwebtoken/rust_crypto"]
+ring = [
+  "tokio-rustls/ring",
+  "rcgen/ring",
+  "hickory-resolver/tls-ring",
+  "hickory-resolver/https-ring",
+  "jsonwebtoken/rust_crypto",
+]
