--- a/wstunnel/Cargo.toml
+++ b/wstunnel/Cargo.toml
@@ -60,6 +60,7 @@ hickory-resolver = { version = "0.25.2", default-features = false, features = [
   "rustls-platform-verifier",
 ] }
 aws-lc-rs = { version = "*", optional = true }
+serde_with = "3.16.1"
 
 [target.'cfg(not(target_family = "unix"))'.dependencies]
 crossterm = { version = "0.29.0" }
