--- a/wstunnel-cli/Cargo.toml
+++ b/wstunnel-cli/Cargo.toml
@@ -2,6 +2,12 @@
 name = "wstunnel-cli"
 version = "10.5.2"
 edition = "2024"
+include = [
+    "src/**/*",
+    "../docs/examples/*",
+    "../LICENSE",
+    "../README.md",
+]
 
 [dependencies]
 anyhow = "1.0.100"
