--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ dist/
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+# Added by goreleaser init:
+.intentionally-empty-file.o
