fix for workflows

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,6 +37,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y musl-tools
 
+      - name: Setup zig
+        uses: goto-bus-stop/setup-zig@v2
+
       - name: Run GoReleaser for Linux
         uses: goreleaser/goreleaser-action@v6
         with:
@@ -69,6 +72,9 @@ jobs:
           rustup target add x86_64-apple-darwin
           rustup target add aarch64-apple-darwin
 
+      - name: Setup zig
+        uses: goto-bus-stop/setup-zig@v2
+
       - name: Run GoReleaser for macOS
         uses: goreleaser/goreleaser-action@v6
         with:
@@ -98,8 +104,11 @@ jobs:
 
       - name: Add Rust targets
         run: |
-          rustup target add x86_64-pc-windows-gnu
-          rustup target add i686-pc-windows-gnu
+          rustup target add x86_64-pc-windows-msvc
+          rustup target add i686-pc-windows-msvc
+
+      - name: Setup zig
+        uses: goto-bus-stop/setup-zig@v2
 
       - name: Run GoReleaser for Windows
         uses: goreleaser/goreleaser-action@v6
@@ -127,6 +136,9 @@ jobs:
           toolchain: "${{ env.RUST_VERSION }}"
           override: true
           components: rustfmt, clippy
+
+      - name: Setup zig
+        uses: goto-bus-stop/setup-zig@v2
 
       - name: Run GoReleaser for FreeBSD
         uses: goreleaser/goreleaser-action@v6
@@ -168,6 +180,16 @@ jobs:
           toolchain: "${{ env.RUST_VERSION }}"
           override: true
           components: rustfmt, clippy
+
+      - name: Add Rust targets
+        run: |
+          rustup target add aarch64-linux-android
+          rustup target add armv7-linux-androideabi
+          rustup target add i686-linux-android
+          rustup target add x86_64-linux-android
+
+      - name: Setup zig
+        uses: goto-bus-stop/setup-zig@v2
 
       - name: Run GoReleaser for Android
         uses: goreleaser/goreleaser-action@v6
